--- a/sites/tesla/index.html
+++ b/sites/tesla/index.html
@@ -1,1 +1,309 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+	<title>NVIDIA Research Center</title>
+	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<script type="text/javascript" src="src/jquery2.js"></script>
+	<meta name="google-site-verification" content="9Ug7KndrQ3rjYPCjijC-Y8glg_4DfnWie7qgFbyO7-4" />
+</head>
+<body>
+	<div id="overlay"></div>
+	<div id="mainContent">
+		<div class="wrapper">
+			<div id="images">
+				<img src="img/uni_logo.png" alt="University of Peradeniya">
+				<img src="img/nvidia_logo.png" alt="NVIDIA Research Center">
+			</div>
+			<h1 class="topmostHeader">NVIDIA Research Center</h1>
+			<h2 class="topmostHeader" style="color: #d8ff93; padding-bottom: 20px;">Faculty of Engineering, University of Peradeniya</h2>
+			<p style="font-size:11pt;">The GPU Research Center at the University of Peradeniya is part of the Embedded Systems, and Computer Architecture Lab (ESCAL) at the Department of Computer Engineering. The University of Peradeniya is one of the oldest Universities in Sri Lanka and the top research university in the country. The major focus of the research center is the investigation of the High-Performance Computing (HPC) aspect of GPU in various domains, including bio-computing, computer security, machine learning and data-mining, and physics. </p>
+			<div id="footerLinks"></div>
+		</div>
+	</div>
+	<div id="sidebar">
+		<h1>We are good at<br>what we do..</h1>
+		<ul>
+			<a href="#publications"><li>Publications</li></a>
+			<a href="#pastProjects"><li>Past Projects</li></a>
+			<a href="#ongoingProjects"><li>Ongoing Projects</li></a>
+			<a href="#demonstration"><li>Ongoing Courses</li></a>
+			<a href="#hostedProjects"><li>Hosted Projects</li></a>
+			<a href="#ourTeam"><li>Our Team</li></a>
+			<a id="goHome" href="#home"><li>Go Back ➡</li></a>
+		</ul>
+	</div>
+	<div id="pastProjects" class="expansion">
+		<h1>Past Projects</h1>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Performance Comparison: GPU Based Parallel Implementations of Aho-Corasick and Commentz-Walter String Matching Algorithms</h2>
+			<span><br>A completed Masters Project – Members: Sandaruwan Herath and Roshan Ragel<br>Sep 2013 - Nov 2015</span>
+		</div>		
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Parallel Independent Component Analysis (ICA) Approach to Blind Source Separation in Brain Computer Interface (BCI)</h2>
+			<span><br>A Completed Final Year Undergraduate Project – Members: Titus Nandakumara, Geesara Pradap, and Roshan Ragel<br>Oct 2014 - Oct 2015</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Accelerating Virus Scanning with GPU</h2>
+			<span><br>A Completed Final Year Undergraduate Project – Members: Thipakar S., Sinthuja Kopalakirushnan, Roshan Ragel, and Dhammika Elkaduwe<br>Oct 2014 - Oct 2015</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Power Analysis Based Side Channel Attacks and Countermeasures</h2>
+			<span><br>A Completed Final Year Undergraduate Project – Members: Hasindu Gamaarachchi, Bhanuka Ganegoda, and Roshan Ragel [This project uses GPUs for performing correlation power analysis attack]<br>Oct 2014 - Oct 2015</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Memory Management in CUDA</h2>
+			<span><br>A Completed Undergraduate Project – Members: M.H.M.G. Dissanayaka, W.T. Madushan, D. Elkaduwe, and R. G. Ragel</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Accelerating Rabin Karp on a Graphics Processing Unit (GPU)</h2>
+			<span><br>A Completed Masters Project – Members: Nayomi Dayarathne and Roshan Ragel<br>Sep  2013 - Oct 2014</span>
+		</div>
+	</div>
+	<div id="ongoingProjects" class="expansion">
+		<h1>Ongoing Projects</h1>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Accelerating Video Enhancement with GPU</h2>
+			<span><br>An Ongoing Third Year Undergraduate Project <br>Members: (T.N.Dahanayaka,K.T.N.Kalamullage),(H.D.T.V.Perera,K.D.B.C.Udugama,C.T.Shi),(A.A.N.M.Premaratne,M.R.S.Silva,D.M.A.G.A.R.B.Dasanayaka),(U.A.I.Ukwaththage,W.A.P.E.Wanigasekara,S.I.Rajapaksha), Hasindu Gamaarachchi, Roshan Ragel</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Accelerating Related Document Search with GPU</h2>
+			<span><br>An Ongoing Third Year Undergraduate Project – Members: H.G.S.P.Kumara, I.C.Paranawithana, U.D.D.Udurawana, Hasindu Gamaarachchi, Roshan Ragel</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>A GPU-Based  Approach for Accelerating DNA Sequence Analysis Algorithms</h2>
+			<span><br>An Ongoing Masters Project – Members: Thangavadivel Senthooran and Roshan Ragel</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Optimizing Plagiarism Detection on Text Based Assignments Using GPU</h2>
+			<span><br>An Ongoing MPhil (Masters by Research) Project <br>Members: Jiffriya Carder and Roshan Ragel</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Hardware Accelerators for Bioinformatics Algorithms Using GPGPUs</h2>
+			<span><br>An Ongoing MPhil (Masters by Research) Project <br>Members: Vajira Thambawita, Dhammika Elkaduwe and Roshan Ragel</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>A Hybrid Approach to Accelerate Protein Secondary Structure Prediction Algorithm Using GPU</h2>
+			<span><br>An Ongoing Masters Project <br>Members: Thangathurai Kartheeswaran and Roshan Ragel</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>High-performance computational approach for Smith-Waterman Algorithm</h2>
+			<span><br>An Ongoing Undergraduate Thesis<br>Members: Chathuri Wickramasinghe, Hasindu Gamaarachchi, and Roshan Ragel</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Optimize GPU Programming of LBM for Wall-Bounded Air Flow (Turbulent Flow) Simulation</h2>
+			<span><br>An Ongoing Undergraduate Thesis<br>Members: Gayani Chandrarathne and Roshan Ragel</span>
+		</div>
+	</div>
+	<div id="publications" class="expansion">
+		<h1>Publications</h1>
+		<div class="projectItem">
+                        <img src="projects/1.png">
+                        <h2>Accelerating k-NN Classification Algorithm Using Graphics Processing Units </h2>
+                        <span><br>by Selvaluxmiy Selvarajan, Titus Nanda Kumara, Velmakivan Ramakrishnan, Pathmanathan Keerthanan, Sampath Deegalla  and Roshan Ragel, <br>in 8th IEEE International Conference on Information and Automation for Sustainability (ICIAfS) 2016
+                </div>
+		<div class="projectItem">
+                        <img src="projects/1.png">
+                        <h2>Generalized and Hybrid Fast-ICA Implementation using GPGPU </h2>
+                        <span><br>by Titus Nanda Kumara, Hasindu Gamaarachchi, and Roshan Ragel, <br>in Proceedings of the 16th International Conference of Advances in ICT for Emerging Regions (ICTer2016) 
+                </div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>The A to Z of Building a Testbed for Power Analysis Attacks</h2>
+			<span><br>by Hasindu Gamaarachchi, Bhanuka Bandara, and Roshan Ragel, <br>in Proceedings of the 10th IEEE International Conference on Industrial and Information Systems 2015 (ICIIS'2015), Peradeniya, Sri Lanka, Dec 2015 (accepted)</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Accelerating Text-based Plagiarism Detection Using GPUs</h2>
+			<span><br>by Jiffriya Cader, Akmal Jahan, Hasindu Gamaarachchi and Roshan Ragel, <br>in 10th IEEE International Conference on Industrial and Information Systems 2015 (ICIIS) (accepted)</span>
+		</div>		
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Testbed for Power Analysis Attack Based on the Arduino Prototyping Board</h2>
+			<span><br>by Hasindu Gamaarachchi, Harsha Ganegoda and Roshan Ragel, <br>in Proceedings of the Peradeniya University International Research Sessions 2015 (iPURSE15), University of Peradeniya, Sri Lanka, Nov. 2015.</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Accelerating Correlation Power Analysis using Graphics Processing Units (GPUs) )</h2>
+			<span><br>by Hasindu Gamaarachchi, Roshan Ragel, and Darshana Jayasinghe, <br>in Information and Automation for Sustainability (ICIAfS), 2014 7th International Conference on, 22-24 Dec. 2014 [<a href="http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=7069547" target="_blank">IEEE Xplore</a>]</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>To Use or Not to Use: Graphics Processing Units (GPUs) for Pattern Matching Algorithms</h2>
+			<span><br>by Vajira Thambawita, Roshan Ragel, and Dhammika Elkaduwe, <br>in Information and Automation for Sustainability (ICIAfS), 2014 7th International Conference on, 22-24 Dec. 2014 [<a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?tp=&arnumber=7069585" target="_blank">IEEE Xplore</a>]</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Accelerating Rabin Karp on a Graphics Processing Unit (GPU) using Compute Unified Device Architecture (CUDA)</h2>
+			<span><br>by Nayomi Dayarathne, Roshan Ragel, <br>in Information and Automation for Sustainability (ICIAfS), 2014 7th International Conference on, 22-24 Dec. 2014 [<a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?reload=true&arnumber=7069589" target="_blank">IEEE Xplore</a>]</span>
+		</div>
+	</div>
+	<div id="demonstration" class="expansion">
+		<h1>Ongoing courses</h1>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Programming GPU with CUDA</h2>
+			<span><br>Introduction, Simplified CUDA architecture, Most common mistakes and debugging, Selected examples, Occupancy and optimization, Proper memory alignment, Shared memory <br>6 week 30 hour short course held in Oct-Nov 2015 <br>Participants : 3rd year students <br>
+			[<a href="https://feels.pdn.ac.lk/course/view.php?id=476" target="_blank">Course page : (please login as guest)</a>]</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Programming GPU with CUDA</h2>
+			<span><br>Introduction, CUDA architecture, Most common mistakes and debugging, Occupancy and optimization, Proper memory alignment, Selected examples, Shared memory, Using other memory types and memory allocation techniques, Advanced and formal guide to optimization, CUDA compute capabilities and latest features, CUDA libraries <br>10 day 30 hour short course held in Feb-Apr 2015 <br>Participants : UG and PG students <br>
+			[<a href="https://feels.pdn.ac.lk/course/view.php?id=426" target="_blank">Course page : (please login as guest)</a>].</span>
+		</div>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>Parallel Computers and Algorithms (CO524)</h2>
+			<span><br>Includes a section about CUDA that teaches CUDA architecture and programming <br> 3 credit technical elective offered to final year students</span>
+		</div>
+	</div>
+	<div id="hostedProjects" class="expansion">
+		<h1>Hosted projects</h1>
+		<div class="projectItem">
+			<img src="projects/1.png">
+			<h2>CUDA Web Applications</h2>
+			<span><a href="http://tesla.ce.pdn.ac.lk/cuda" target="_blank">http://tesla.ce.pdn.ac.lk/cuda</a></span>
+		</div>
+	</div>
+	<div id="ourTeam" class="expansion">
+		<h1>Our Team</h1>
+		<h2>Staff</h2>
+		<div class="projectItem" >
+			<span class="shortDescription">
+				<strong>Dr. Roshan Ragel</strong><br>
+				Senior Lecturer in Computer Engineering, University of Peradeniya <br>
+				Principle Investigator, NVIDIA Research Center, University of Peradeniya <br>
+				Lead Researcher, Embedded Systems and Computer Architecture Lab (ESCAL), University of Peradeniya <br>
+				Visiting Fellow, Embedded Systems Lab, School of Computer Science and Engineering, University of New South Wales <br>
+			</span>
+		</div>
+		<div class="projectItem" >
+		<span class="shortDescription">
+		<strong>Dr. Dhammika Elkaduwe</strong><br>
+		Senior Lecturer in Computer Engineering, University of Peradeniya <br>
+		The Head of the Department, Computer Engineering, University of Peradeniya <br>
+		</span>
+		</div>
+		<div class="projectItem" >
+		<span class="shortDescription">
+		<strong>Mr. Ziyan Maraikar</strong><br>
+		Senior Lecturer in Computer Engineering, University of Peradeniya<br>
+		</span>
+		</div>
+		<div class="projectItem" >
+		<span class="shortDescription">
+		<strong>Dr. Tilani Gunawardena</strong><br>
+		Lecturer in Computer Engineering, University of Peradeniya <br>
+		Lab Coordinator, Parallel Computing Course,  Computer Engineering, University of Peradeniya<br>
+		</span>
+		</div>
+		<div class="projectItem" >
+		<span class="shortDescription">
+		<strong>Mr. Hasindu Gamaarachchi</strong><br>
+		Instructor in Computer Engineering, University of Peradeniya <br>
+		Lecturer for the short course Programming GPU with CUDA at  NVIDIA Research Center, University of Peradeniya<br>
+		</span>
+		</div>
+		<div class="projectItem" >
+		<span class="shortDescription">
+		<strong>Mr. Titus Nanda Kumara</strong><br>
+		Instructor in Computer Engineering, University of Peradeniya <br>
+		Instructor for the short course Programming GPU with CUDA at NVIDIA Research Center, University of Peradeniya<br>
+		</span>
+		</div>
 
+		<h2>Students</h2>
+		<div class="projectItem" >
+		<span class="shortDescription">
+		<strong>Mr. Vajira Thambawita</strong><br>
+		MPhil Student (Computer Engineering, Faculty of Engineering) <br>
+		Project Title: Hardware Accelerators for Bioinformatics Algorithms Using GPGPUs <br>
+		</span>
+		</div>
+		<div class="projectItem" >
+		<span class="shortDescription">
+		<strong>Ms. Jiffriya Carder</strong><br>
+		MPhil Student (Computer Science, PGIS) <br>
+		Project Title: Optimizing Plagiarism Detection on Text Based Assignments Using GPU<br>
+		</span>
+		</div>
+		<div class="projectItem" >
+		<span class="shortDescription">
+		<strong>Ms. Chathuri Wickramasinghe</strong><br>
+		Undergraduate Thesis Student (Computer Science, Faculty of Science) <br>
+		Project Title: High-performance Computational Approach for Smith-Waterman Algorithm<br>
+		</span>
+		</div>
+		<div class="projectItem" >
+		<span class="shortDescription">
+		<strong>Ms. Gayani Chandrarathne</strong><br>
+		Undergraduate Thesis Student (Computer Science, Faculty of Science) <br>
+		Project Title: Optimize GPU Programming of LBM for Wall-Bounded Air Flow Simulation<br>
+		</span>
+		</div>
+	</div>
+	<div id="Contacts" class="expansion">
+		<h1>Contact us</h1>
+		<span>Contact Mr. Hasindu for adding contact details</span>
+	</div>
+	<script type="text/javascript">
+	$(document).ready(function(){
+		// alert("hello!");
+		
+	});
+	$("#sidebar ul a").click(function () {
+		var value = $(this).attr("href");
+		if($(window).width()<900){
+			handleScrolls(value);
+			return false;
+		}
+		if(value == "#home"){
+			slideSideBarRight();
+			$("#goHome").fadeOut();
+         $(".expansion").css("left", "100%");
+		}
+		else{
+         
+         $(".expansion").css("left", "100%");
+		$("#sidebar").css("right", 0 +  "px");
+         setTimeout(function(){
+	         $(value).css("left", $(window).width() - 550 + "px");
+	         slideSideBarLeft();
+         }, 300);
+     	}
+	    return false;
+    }); 
+	function slideSideBarLeft(){
+		$("#sidebar").css("right", "550px");
+		if($(window).width()<1400) $("#mainContent").fadeOut(300);
+		$("#goHome").fadeIn();
+	}
+	function slideSideBarRight(){
+		$("#sidebar").css("right", 0 +  "px");
+		$("#mainContent").fadeIn(300);
+	}
+	function handleScrolls(scrollToLink){
+	    $('html, body').animate({
+	        scrollTop: $(scrollToLink).offset().top
+	    }, 1000);
+	}
+	</script>
+</body>
+</html>
