--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                     <h4 class="card-title mr-auto">ESCAL</h4>
 
                                     <p class="card-text">The Embedded Systems and Computer Architecture Laboratory (ESCAL) is a research group at the Department of Computer Engineering at the University of Peradeniya.</p>
-                                    <a href="./sites/labs/escal/" class="btn btn-primary project-btn mt-auto">Visit</a>
+                                    <a href="./sites/labs/escal/" class="btn btn-secondary project-btn mt-auto">Visit</a>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +184,7 @@
                                     <h4 class="card-title mr-auto">NVIDIA Research Center</h4>
 
                                     <p class="card-text">The GPU Research Center at the University of Peradeniya is part of the Embedded Systems, and Computer Architecture Lab (ESCAL) at the Department of Computer Engineering.</p>
-                                    <a href="./sites/labs/tesla/" class="btn btn-primary project-btn mt-auto ">Visit</a>
+                                    <a href="./sites/labs/tesla/" class="btn btn-secondary project-btn mt-auto ">Visit</a>
                                 </div>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
                                     <h4 class="card-title mr-auto">Cambio Wearable Computing Lab</h4>
 
                                     <p class="card-text">A fully equipped research lab donated by “Cambio Software Engineering, Sri Lanka”</p>
-                                    <a href="./sites/labs/wearable/" class="btn btn-primary project-btn mt-auto">Visit</a>
+                                    <a href="./sites/labs/wearable/" class="btn btn-secondary project-btn mt-auto">Visit</a>
                                 </div>
                             </div>
                         </div>
