a few html updates

--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
         <div class="row">
             <div class="col-md-8 blog-main">
 
+                <div class="blog-post">
+                    <p>This repository contains the github pages webiste <a target="_blank" href="https://cepdnaclk.github.io">https://cepdnaclk.github.io</a> for Department of Computer Engineering, University of Peradeniya, Sri Lanka. The official website of the deaprtment is hosted at <a target="_blank" href="https://www.ce.pdn.ac.lk">https://www.ce.pdn.ac.lk</a>. This repository contains supplementary content.</p>
+
+                    <h4>Source code</h4>
+                    <p>The source code is hosted at <a href="https://github.com/cepdnaclk/cepdnaclk.github.io">https://github.com/cepdnaclk/cepdnaclk.github.io</a>. Please fork, commit and send pull requests to improve/update the content.</p>
+
+                    <h4>For administrators</h4>
+                    <p>Please look up <a href="./maintenance">maintenance</a> for detailed instructions.</p>
+                </div>
 
                 <div class="blog-post">
                     <h4 class="blog-post-title">Field Selection</h4>
@@ -236,6 +245,7 @@
                         <li><a href="./sites/servers/">Servers</a></li>
                         <li><a href="./sites/results/">Results</a></li>
                         <li><a href="./sites/students/">Students</a></li>
+                        <li><a href="./sites/other/">Other</a></li>
                     </ol>
                 </div>
             </aside>
