a few html updates

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Source: https://getbootstrap.com/docs/4.0/examples/blog/ -->
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -241,7 +239,7 @@
                     <h4 class="font-italic">Links</h4>
                     <ol class="list-unstyled">
                         <li><a href="./sites/faq/">FAQ</a></li>
-                        <li><a href="./sites/maintenance/">Maintenance</a></li>
+                        <li><a href="./maintenance/">Maintenance</a></li>
                         <li><a href="./sites/servers/">Servers</a></li>
                         <li><a href="./sites/results/">Results</a></li>
                         <li><a href="./sites/students/">Students</a></li>
@@ -274,5 +272,8 @@
         text: 'Thumbnail'
     });
 </script>
+
+<!-- Source: https://getbootstrap.com/docs/4.0/examples/blog/ UpdatedBy: Nuwan Jaliyagoda-->
+
 </body>
 </html>
