--- a/pages/discord.html
+++ b/pages/discord.html
@@ -12,7 +12,7 @@ permalink: /discord/
                     PeraCom <span class="display-4">Discord</span>
                 </div>
                 <div class="container">
-                    <a class="btn btn-primary btn-lg my-3" target="_blank" href="#">Join PeraCom Discord</a>
+                    <a class="btn btn-primary btn-lg my-3" target="_blank" href="https://url.ce.pdn.ac.lk/discord">Join PeraCom Discord</a>
 
                     <img src="{{ '/assets/images/discord.jpg' | relative_url }}" alt="" class="img-fluid">
                 </div>
