--- a/pages/discord.html
+++ b/pages/discord.html
@@ -3,7 +3,7 @@ layout: minimum
 permalink: /discord/
 ---
 
-<div class="d-flex align-self-center text-center">
+<div class="d-flex align-self-center text-center pb-5">
     <div class="container vh-100 d-flex">
         <div class="row">
             <div class="col-12 col-md-9 col-lg-8 mx-auto px-5 py-1">
@@ -12,58 +12,87 @@ permalink: /discord/
                     PeraCom <span class="display-4">Discord</span>
                 </div>
                 <div class="container">
-                    <a class="btn btn-primary btn-lg my-3" target="_blank" href="https://url.ce.pdn.ac.lk/discord">Join PeraCom Discord</a>
-
                     <img src="{{ '/assets/images/discord.jpg' | relative_url }}" alt="" class="img-fluid">
+
+                    <a class="btn btn-primary disabled btn-lg my-3" target="_blank"
+                        href="https://url.ce.pdn.ac.lk/discord">
+                        <del>Join PeraCom Discord</del>
+                    </a>
+
+                    <div class="alert alert-danger">
+                        Due to security reasons, Discord Invitation link was removed. <br>
+                        Plase contact your <i><b>Field Representative</b></i> or one of the <i><b>Discord
+                                Moderator</b></i> for
+                        obtaining an Invitation Link.
+                    </div>
                 </div>
 
                 <hr>
 
-                <p>If you have never used Discord before, here are a few tips to using it well within discord servers.</p>
+                <p>If you have never used Discord before, here are a few tips to using it well within discord servers.
+                </p>
 
                 <h4>CLOUD APP</h4>
-                <p>Discord is a cloud base app. So if you lose your phone/tablet/laptop, you won't lose anything on Discord. You can check discord on any web brower aswell as your mobile app.</p>
+                <p>Discord is a cloud base app. So if you lose your phone/tablet/laptop, you won't lose anything on
+                    Discord. You can check discord on any web brower aswell as your mobile app.</p>
 
                 <h4>MUTE CHANNELS </h4>
-                <p>You can mute any discord channel by holding your finger on the channel and then selecting mute from the options. This will stop the channels lighting up when new posts are made.</p>
+                <p>You can mute any discord channel by holding your finger on the channel and then selecting mute from
+                    the options. This will stop the channels lighting up when new posts are made.</p>
 
                 <h4>NOTIFICATION SETTINGS</h4>
                 <p>
                     You can alter your server notification settings to reduce notifications.
-                    <b>SELECT Server -> then select three stacked dots top right next to the server name -> then select notification settings.</b>
+                    <b>SELECT Server -> then select three stacked dots top right next to the server name -> then select
+                        notification settings.</b>
                 </p>
                 <p>
-                    Select the @MENTION ONLY option, DON'T mute our entire server as there will always be the channels you should be reading often.
+                    Select the @MENTION ONLY option, DON'T mute our entire server as there will always be the channels
+                    you should be reading often.
                 </p>
                 <p>
                     You can supress @everyone or @here if you want although these are rarely used here.
                 </p>
 
                 <h4>@MENTION</h4>
-                <p>You can tag a member and ensure they are notified by typing @ ahead of their discord names. Once @ has been typed names will start to appear above the keyboard for selection as you continue to type. Only members that have access to the channel will appear to be tagged in there. </p>
+                <p>You can tag a member and ensure they are notified by typing @ ahead of their discord names. Once @
+                    has been typed names will start to appear above the keyboard for selection as you continue to type.
+                    Only members that have access to the channel will appear to be tagged in there. </p>
 
                 <h4>ROLES</h4>
-                <p>Discord allows us to create and assign roles to enable us to group tag people. It also separates members by colors.</p>
+                <p>Discord allows us to create and assign roles to enable us to group tag people. It also separates
+                    members by colors.</p>
 
                 <h4>#CHANNEL LINKS </h4>
-                <p>Discord also allows us to link to a particular channel using the # key. For example: 🍻_cantina_chat will take you to the channel when clicked. </p>
+                <p>Discord also allows us to link to a particular channel using the # key. For example: 🍻_cantina_chat
+                    will take you to the channel when clicked. </p>
 
                 <h4>REACTIONS </h4>
-                <p>Discord has emojis called reactions. These are a nice way to acknowledge messages or announcements, use them. 👍 👌 🤘 </p>
+                <p>Discord has emojis called reactions. These are a nice way to acknowledge messages or announcements,
+                    use them. 👍 👌 🤘 </p>
 
                 <h4>EDIT MESSAGES </h4>
-                <p>Discord can edit messages and delete messages. So if you make a typo, just edit it. If you edit a tag into a post or change a tag using edit, it wont work. Tags need to be in original posts in order to work.</p>
+                <p>Discord can edit messages and delete messages. So if you make a typo, just edit it. If you edit a tag
+                    into a post or change a tag using edit, it wont work. Tags need to be in original posts in order to
+                    work.</p>
 
                 <h4>PINNED MESSAGES </h4>
-                <p>A lot of the channels here have some form of guidance or important posts pinned to the channel. Check them out by selecting pinned messaged from the channel menu when pressing the three stacked dots top right of your screen.</p>
+                <p>A lot of the channels here have some form of guidance or important posts pinned to the channel. Check
+                    them out by selecting pinned messaged from the channel menu when pressing the three stacked dots top
+                    right of your screen.</p>
 
                 <h4>DIRECT MESSAGING</h4>
-                <p>If you belong to a server, you can then DM anyone also in that server, unless they block direct messaging from the same servers in thier settings.</p>
-                <p>SELECT the people icon above the server icons on the left -> select "find or start a conversation" to the right -> type the name of the member your looking for after the @ and they will appear below</p>
+                <p>If you belong to a server, you can then DM anyone also in that server, unless they block direct
+                    messaging from the same servers in thier settings.</p>
+                <p>SELECT the people icon above the server icons on the left -> select "find or start a conversation" to
+                    the right -> type the name of the member your looking for after the @ and they will appear below</p>
 
                 <h4>DISCORD ID AND DM SHORTCUT</h4>
-                <p>You can quickly find a members discord ID by pressing their avatar, it will then pop up on the screen.</p>
-                <p>If you hold your finger on a members avatar from somewhere in chat and then click the avatar again on the next screen that shows, you can access an add friend and direct message button for that member.</p>
+                <p>You can quickly find a members discord ID by pressing their avatar, it will then pop up on the
+                    screen.</p>
+                <p>If you hold your finger on a members avatar from somewhere in chat and then click the avatar again on
+                    the next screen that shows, you can access an add friend and direct message button for that member.
+                </p>
 
                 <h4>SPOILER FEATURE</h4>
                 <p>Click this 👉 type two pipes like this ll ahead and behind of any text to hide it until clicked</p>
@@ -82,7 +111,7 @@ permalink: /discord/
 
 
 <style media="screen">
-    h4{
+    h4 {
         padding-top: 12px;
     }
 </style>
